# pixyship

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  LICENSE.txt  Makefile  README.md  alembic.ini  api.py  api_helpers.py  data_load.py  deploy_ssh_config  dev_reqs.txt  docker-compose.yml  fabfile.py  layout_ga.py  models.py  pixstar.py  ps_client.py  requirements.txt  run.py  scheduled.py  setup.cfg  ship.py  test.py  user_login_resp.py  uwsgi.ini
backend/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini.dist  api.http  api_errors.py  api_helpers.py  app.py  check-token.py  clear_cache.py  config.py.dist  constants.py  data_load.py  db.py  deaptest.py  dev_reqs.txt  devenv.nix  docker-compose.yml  docker-flask  fabfile.py  flake.nix  get_assets.py  importer.py  justfile  layout_ga.py  models.py  package-lock.json  pixelstarshipsapi.py  pixyship.py  ps_client.py  pyproject.toml  requirements.txt  run.py  scheduled.py  setup.cfg  ships.py  test.py  utils.py  (+3 more)
backend/alembic/: env.py
backend/alembic/versions/: 02434df3f8fa_add_market_buyer_and_seller_name.py  1b988e6cf456_add_url_column_to_record_table.py  2ce3dfcb486e_create_daily_sale_table.py  6033f73dc5ea_remove_modification_column_in_listing.py  72992fac062b_add_alliance_table.py  7da533ce19c6_add_trigram_index_to_player.py  a2ac148441cf_add_modifications_to_listing.py  bdc90a07b024_login_and_token_tracking.py  cf08232a3b60_initial.py  e98016f3cfec_track_reference_changes.py  ea831971898f_add_listings.py  f04491b259c1_add_market_message_table.py  f6650357d5d8_add_client_datetime_column_to_device_.py
backend/app/: __init__.py  config.py  constants.py  pixelstarshipsapi.py  pixyship.py  security.py  utils.py
backend/app/blueprints/: __init__.py  api.py  root.py
backend/app/commands/: __init__.py  cache.py  check.py  importer.py  tools.py
backend/app/enums/: __init__.py  record_type.py  type.py
backend/app/ext/: __init__.py  db.py
backend/app/models/: __init__.py  alliance.py  daily_sale.py  device.py  listing.py  market_message.py  player.py  record.py
backend/app/services/: achievement.py  base.py  changes.py  character.py  collection.py  craft.py  daily_offer.py  factory.py  item.py  market.py  missile.py  pixyship.py  player.py  prestige.py  reasearch.py  record.py  record_details.py  room.py  ship.py  skin.py  sprite.py  training.py
backend/app/utils/: calculation.py  math.py  pss.py  xml.py
backend/config/: alembic_ls.ini  circus.ini  dev_config.py  pixstar
backend/migrations/versions/: 02434df3f8fa_add_market_buyer_and_seller_name.py  1b988e6cf456_add_url_column_to_record_table.py  5372dc399fa3_add_record_name_column.py  6f6fcebc52f2_change_record_type_column_from_text_to_.py  72992fac062b_add_alliance_table.py  7b4cf67136ba_change_char_to_character_in_record_type.py  a2ac148441cf_add_modifications_to_listing.py  bdc90a07b024_login_and_token_tracking.py  c4510c3c0cda_add_record_sprite_id_column.py  c6df405d0ab3_migrate_dailysale_type_to_enum.py  cf08232a3b60_initial.py  ea831971898f_add_listings.py  ed521b4cb886_convert_record_type_values_to_uppercase.py  f04491b259c1_add_market_message_table.py  f6650357d5d8_add_client_datetime_column_to_device_.py
backend/models/: __init__.py  alliance.py  daily_sale.py  device.py  listing.py  market_message.py  player.py  record.py
backend/test/: test_api.py  test_app.py  test_database.py
backend/tests/: conftest.py  test_api.py  test_app.py  test_blueprint_api.py  test_blueprint_root.py  test_config.py  test_database.py  test_factory.py  test_utils.py
backend/tools/: import-dolores-sales-history.py
config/: __init__.py  config_template.py
frontend/: .dockerignore  .env  .env.beta  .env.development  .env.production  .env.staging  .gitignore  Dockerfile  Makefile  README.md  build.sh  devenv.nix  devenv.yaml  docker-compose.yml  docker-npm  flake.nix  (+7 more)
frontend-v2/: package-lock.json  package.json
(+87 files in other folders)
